@@ -16,7 +16,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.dalhousie.servicehub.util.ResponseBody.ResultType.SUCCESS;
 
@@ -29,10 +28,9 @@ public class ManageServiceImpl implements ManageService {
     private final ServiceMapper serviceMapper;
 
     @Override
-    public ResponseBody<Object> addService(AddServiceRequest addServiceRequest, Long providerId) {
-        if (!userRepository.existsById(providerId)) {
+    public ResponseBody<String> addService(AddServiceRequest addServiceRequest, Long providerId) {
+        if (!userRepository.existsById(providerId))
             throw new UserNotFoundException("User not found for id: " + providerId);
-        }
 
         ServiceModel serviceModel = ServiceModel.builder()
                 .description(addServiceRequest.getDescription())
@@ -41,9 +39,7 @@ public class ManageServiceImpl implements ManageService {
                 .type(addServiceRequest.getType())
                 .providerId(providerId)
                 .build();
-
         serviceRepository.save(serviceModel);
-
         return new ResponseBody<>(SUCCESS, "", "Add service successful");
     }
 
@@ -55,30 +51,26 @@ public class ManageServiceImpl implements ManageService {
         List<ServiceDto> services = serviceRepository.findByProviderId(user.getId())
                 .stream()
                 .map(serviceMapper::toDto)
-                .collect(Collectors.toList());
-
+                .toList();
         GetServicesResponse response = GetServicesResponse.builder()
                 .services(services)
                 .build();
-
         return new ResponseBody<>(SUCCESS, response, "Fetched user services successfully");
     }
 
     @Override
-    public ResponseBody<Object> deleteService(Long serviceId) {
-
+    public ResponseBody<String> deleteService(Long serviceId) {
         ServiceModel service = serviceRepository.findById(serviceId)
                 .orElseThrow(() -> new ServiceNotFoundException("Service not found with ID: " + serviceId));
 
         serviceRepository.delete(service);
-        return new ResponseBody<>(SUCCESS, null, "Service deleted successfully");
+        return new ResponseBody<>(SUCCESS, "", "Service deleted successfully");
     }
 
     @Override
-    public ResponseBody<Object> updateService(UpdateServiceRequest updateServiceRequest, Long providerId) {
-        if (!serviceRepository.existsById(updateServiceRequest.getId())) {
+    public ResponseBody<String> updateService(UpdateServiceRequest updateServiceRequest, Long providerId) {
+        if (!serviceRepository.existsById(updateServiceRequest.getId()))
             throw new ServiceNotFoundException("Service not found for id: " + updateServiceRequest.getId());
-        }
 
         serviceRepository.updateService(
                 updateServiceRequest.getId(),
@@ -88,7 +80,6 @@ public class ManageServiceImpl implements ManageService {
                 updateServiceRequest.getType(),
                 providerId
         );
-
         return new ResponseBody<>(SUCCESS, "", "Update service successful");
     }
 }
